# clikernel

./: .gitignore  CHANGELOG.md  DEV.md  MANIFEST.in  README.md  TEST.md  pyproject.toml
clikernel/: __init__.py  base.py  cli.py  dojo.py  mcp.py  rules.py  skill.py  stream.py
clikernel/dojo_data/proj/: 01_api.ipynb  core.py  pyproject.toml
examples/: inspectors.py
tests/: test_cli.py  test_dojo.py  test_mcp.py  test_rules.py  test_stream.py
